--- a/app/templates/home/template.html
+++ b/app/templates/home/template.html
@@ -339,11 +339,11 @@
                             selectedSystemPrompt: null,
                             idCounter: 1,
                             commonVariables: [
-                                { name: '${current_test_name}', description: 'Name of the current test.' },
+                                { name: '${current_test_title}', description: 'Name of the current test.' },
                                 { name: '${current_duration}', description: 'Duration of the current test in seconds.' },
                                 { name: '${current_start_time}', description: 'Start time of the current test.' },
                                 { name: '${current_end_time}', description: 'End time of the current test.' },
-                                { name: '${baseline_test_name}', description: 'Name of the baseline test.' },
+                                { name: '${baseline_test_title}', description: 'Name of the baseline test.' },
                                 { name: '${baseline_duration}', description: 'Duration of the baseline test in seconds.' },
                                 { name: '${baseline_start_time}', description: 'Start time of the baseline test.' },
                                 { name: '${baseline_end_time}', description: 'End time of the baseline test.' },
